--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -24,11 +29,13 @@
                    <img id="bird5" onclick="shoot(this)" src="assets/bird5.gif" alt="">
                     <img id="bird6" onclick="shoot(this)"  src="assets/bird6.gif" alt="">
 
-             
-                    <div id="shot">SHOT</div>
-                    <div id="score">SCORE</div>       
 
-                <audio id="gunshot" src="assets/gunshot.mp3"></audio>
+                    <div id="bullet">BULLETS: <span id="currentbullets">6</span></div>       
+                    <div id="score">SCORE: <span id="currentscore">0</span></div>       
+
+                <audio id="gunshot" src="assets/gunshot.mp3" preload="auto"></audio>
+                <audio id="duck-flapping" src="assets/duck-flapping.mp3" preload="auto"></audio>
+                <audio id="duck-caught" src="assets/duck-caught.mp3" preload="auto"></audio>
         
     </div>
      <script src="script.js"></script>
