--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
             <!-- <img id="bird1" src="bird-unscreen.gif" alt=""> -->
     
-                  <img id="bird1" onclick="shoot(this)" src="assets/bird1.gif" alt="">
-                   <img id="bird2" onclick="shoot(this)" src="assets/bird2.gif" alt="">
-                    <img id="bird3" onclick="shoot(this)"  src="assets/bird3.gif" alt="">
-                    <img id="bird4" onclick="shoot(this)" src="assets/bird4.gif" alt="">
-                   <img id="bird5" onclick="shoot(this)" src="assets/bird5.gif" alt="">
-                    <img id="bird6" onclick="shoot(this)"  src="assets/bird6.gif" alt="">
+                  <img id="bird1" class="bird" onclick="shoot(this)" src="assets/bird1.gif" alt="">
+                   <img id="bird2" class="bird" onclick="shoot(this)" src="assets/bird2.gif" alt="">
+                    <img id="bird3" class="bird" onclick="shoot(this)"  src="assets/bird3.gif" alt="">
+                    <img id="bird4" class="bird" onclick="shoot(this)" src="assets/bird4.gif" alt="">
+                   <img id="bird5" class="bird" onclick="shoot(this)" src="assets/bird5.gif" alt="">
+                    <img id="bird6"  class="bird" onclick="shoot(this)" src="assets/bird6.gif" alt="">
 
 
                     <div id="bullet">BULLETS: <span id="currentbullets">6</span></div>       
@@ -41,6 +41,38 @@
      <script src="script.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
