--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 audio.play();
                 
                 setTimeout(function() {
-                    window.location.href = "index.html";
+                    window.location.href = "main.html";
                 }, 3000); 
             });
         </script>
