--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
               padding-top: 4px;
               font-size: 3rem;
                top: 40%;
+
        }
+       
     img{
         position: absolute;
         height: 200px;
@@ -60,7 +62,20 @@
             left: 100%;
         }
     }
+    
+    @media only  screen and (max-height : 420px ){
+       button{
+        height: 61px;
+        width: 118px;
+        font-size: 2rem;
+       }
+       img{
+        height: 132px;
+        width: 163px;
+        bottom: -10px;
+       }
 
+    }
     </style>
 </head>
 <body>
@@ -82,3 +97,7 @@
 
 </body>
 </html>
+
+
+
+
